style: small-btn alignment fix with flex

--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -241,7 +241,9 @@ h2 {
 .small-btn{
     width: 200px;
     height: 60px;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   padding: 20px 40px;
   margin: 30px;
   font-size: 16px;
@@ -320,9 +322,11 @@ h2 {
     }
     .small-btn{
         width: 150px;
-        height: 60px;
+        min-width: 100px;
+        height: 70px;
         font-size: 15px;
         margin-top: 2vh;
+        padding: 0px 20px;
     }
     .explore-btn{
         margin-top: 10vh;
@@ -342,11 +346,11 @@ h2 {
         font-size: 15px;
     }
     .small-btn{
-        width: 100px;
+        width: 120px;
         min-width: 90px;
         height: 40px;
         font-size: 12px;
-        padding: 10px 10px 10px 10px;
+        padding: 10px 20px;
     }
     .col .button-container {
         width: 80%;
